@@ -109,7 +109,8 @@ public class UnarmedManager extends SkillManager {
             if (UserManager.getPlayer(defender) == null)
                 return;
 
-            Item item = ItemUtils.spawnItem(getPlayer(), defender.getLocation(), defender.getInventory().getItemInMainHand(), ItemSpawnReason.UNARMED_DISARMED_ITEM);
+            final Item item = ItemUtils.spawnItem(getPlayer(), defender.getLocation(),
+                    defender.getInventory().getItemInMainHand(), ItemSpawnReason.UNARMED_DISARMED_ITEM);
 
             if (item != null && mcMMO.p.getAdvancedConfig().getDisarmProtected()) {
                 item.setMetadata(MetadataConstants.METADATA_KEY_DISARMED_ITEM, UserManager.getPlayer(defender).getPlayerMetadata());
